--- a/03-multi-resoures.yaml
+++ b/03-multi-resoures.yaml
@@ -2,10 +2,10 @@ kind: Pod
 apiVersion: v1
 metadata:
   name: multi-resources
-  Namespace: expense
 spec:
   containers:
   - name: nginx
     image: nginx
   - name: almalinux
     image: almalinux:9
+    command: ["sleep", "1000"]
